diagnostics/tests/snapshots/multi_file.snap
error[TEST0100]: uses two files
 --> b.js:1:7
  |
1 | const b = 2;
  |       ^ uses two files
 --> a.js:1:7
  |
1 | const a = 1;
  |       - related symbol
